Sat Nov 14 21:44:56 2015  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb: Use "<<" to reduce string allocation.

Sat Nov 14 17:45:49 2015  Tanaka Akira  <akr@fsij.org>

	* lib/tsort.rb: Specify frozen_string_literal: true.

Sat Nov 14 17:25:15 2015  Tanaka Akira  <akr@fsij.org>

	* lib/resolv-replace.rb: Specify frozen_string_literal: true.

Sat Nov 14 17:00:13 2015  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb: Specify frozen_string_literal: true.

Sat Nov 14 16:43:02 2015  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb: Specify frozen_string_literal: true.

Sat Nov 14 05:04:09 2015  Koichi Sasada  <ko1@atdot.net>

	* node.h: remove old comments.

Sat Nov 14 04:55:36 2015  Koichi Sasada  <ko1@atdot.net>

	* refactoring CREF related code.

	* eval_intern.h: remove unused setter functions.
	  CREF_CLASS_SET()
	  CREF_NEXT_SET()
	  CREF_SCOPE_VISI_COPY()

	* eval_intern.h: rename flags:
	  * NODE_FL_CREF_PUSHED_BY_EVAL_ -> CREF_FL_PUSHED_BY_EVAL
	  * NODE_FL_CREF_OMOD_SHARED_ -> CREF_FL_OMOD_SHARED
	  and use IMEMO_FL_USER1/2.

	* vm.c (vm_cref_new): accept push_by_eval parameter.

	* vm.c (vm_cref_new_use_prev): added for rb_vm_rewrite_cref().

	* vm_insnhelper.c (vm_cref_push): accept pushed_by_eval parameter.

	* vm_insnhelper.h: remove unused macros:
	  COPY_CREF_OMOD() and COPY_CREF().

	* vm_eval.c, insns.def: catch up this fix.

Sat Nov 14 02:58:03 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_define_method): refactoring.
	  * get CREF in this function.
	  * cbase is no longer needed (CREF_CLASS(cref) is enough).

	* compile.c: RubyVM::FrozenCore.define_method only accept 2 args.

Sat Nov 14 02:34:43 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_define_method): do not use current CREF immediately,
	  but check CREF in environment or methods. Methods defined in methods
	  should be public.
	  [Bug #11571]

	* vm_method.c (rb_scope_module_func_check): check CREF in env or me.
	  if CREF is contained by `me', then return FALSE.
