@@ -1,3 +1,7 @@
+Sat Nov 14 22:15:07 2015  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/lib/socket.rb: Specify frozen_string_literal: true.
+
 Sat Nov 14 21:44:56 2015  Tanaka Akira  <akr@fsij.org>
 
 	* lib/time.rb: Use "<<" to reduce string allocation.
